--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,5 @@ jobs:
     - name: Install coverage
       run: pip3 install coverage
 
-    - name: Run tests with coverage
-      run: coverage run -m unittest discover -s tests
-    
-    - name: Generate coverage report
-      run: coverage report
+    - name: Run tests
+      run: python3 -m unittest discover -s tests
