--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
     # Step 3: Build the program
     - name: Build the program
-      run: clang++ -std=c++17 *.cpp -o fcard
+      run: clang++ -std=c++17 *.cpp -o fcard -lncurses
 
     # Step 4: Test the program
     - name: Install coverage
